// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Quote Component with Bundles (with Pending Email) --- Snapshot +++capturing Snapshot with 1`] = `
<div>
  <h3>
    Pricing Indication:
  </h3>
  <div
    className="quoteBlocks"
  >
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Test discount, contingent on binding with Builder’s Risk Package"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 4950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 5323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="RPS discount, contingent on binding with Builder’s Risk Package"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 250,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 6950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 7323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Standard rate"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 20000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4500,
            "rate": 0,
            "terrorPremium": 225,
            "totalExcessPremium": 21000,
            "totalPremium": 4850,
          }
        }
      />
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      One of the following underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="legalText"
  >
    The "pricing indication" is issued as a matter of information only and does not confer any rights upon the insured or constitute a contract between Colony Specialty and the authorized representative or producer of the insured or the insured.
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</div>
`;

exports[`>>> Quote Component with OCP Rating --- Snapshot +++capturing Snapshot with 1`] = `
<div>
  <h3>
    Pricing Indication:
  </h3>
  <div
    className="quoteBlocks"
  >
    <div>
      <QuoteBlock
        className="ocp primaryPricing"
        mainTitle="Owners and Contractors Protective"
        productTitle="Owners and Contractors Protective"
        ratings={
          Object {
            "additionalCoverage": null,
            "anticipatedProjectLength": 12,
            "excessPremium": null,
            "excessTerrorPremium": null,
            "instantQuote": true,
            "premium": 10720,
            "rate": 0.87,
            "terrorPremium": 536,
            "totalExcessPremium": null,
            "totalPremium": 11256,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="ocp upsell"
        mainTitle="Here is what you would pay with an Owner's Interest Policy"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 20000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4500,
            "rate": 0,
            "terrorPremium": 225,
            "totalExcessPremium": 21000,
            "totalPremium": 4850,
          }
        }
      />
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      One of the following underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="emailStatus success"
  >
    <img
      alt="thumbs up"
      src="https://s3.us-east-1.amazonaws.com/ownersedge-dev-assets/images/thumbs-up.png"
    />
    <p>
      Your submission forms have been successfully processed.
    </p>
    <span>
      The appropriate forms should appear in your inbox within the next minute. Thank you for using Argo Limited.
    </span>
  </div>
  <div
    className="legalText"
  >
    The "pricing indication" is issued as a matter of information only and does not confer any rights upon the insured or constitute a contract between Colony Specialty and the authorized representative or producer of the insured or the insured.
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</div>
`;

exports[`>>> Quote Component with One Bundle (with Success Email) --- Snapshot +++capturing Snapshot with 1`] = `
<div>
  <h3>
    Pricing Indication:
  </h3>
  <div
    className="quoteBlocks"
  >
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Test discount, contingent on binding with Builder’s Risk Package"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 4950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 5323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Standard rate"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 20000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4500,
            "rate": 0,
            "terrorPremium": 225,
            "totalExcessPremium": 21000,
            "totalPremium": 4850,
          }
        }
      />
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      One of the following underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="emailStatus success"
  >
    <img
      alt="thumbs up"
      src="https://s3.us-east-1.amazonaws.com/ownersedge-dev-assets/images/thumbs-up.png"
    />
    <p>
      Your submission forms have been successfully processed.
    </p>
    <span>
      The appropriate forms should appear in your inbox within the next minute. Thank you for using Argo Limited.
    </span>
  </div>
  <div
    className="legalText"
  >
    The "pricing indication" is issued as a matter of information only and does not confer any rights upon the insured or constitute a contract between Colony Specialty and the authorized representative or producer of the insured or the insured.
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</div>
`;

exports[`>>> Quote Component with One Bundle and Excess (with Success Email) --- Snapshot +++capturing Snapshot with 1`] = `
<div>
  <h3>
    Pricing Indication:
  </h3>
  <div
    className="quoteBlocks"
  >
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Test discount, contingent on binding with Builder’s Risk Package"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 10000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 11000,
            "totalPremium": 5323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Standard rate"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 20000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4500,
            "rate": 0,
            "terrorPremium": 225,
            "totalExcessPremium": 21000,
            "totalPremium": 4850,
          }
        }
      />
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      One of the following underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="emailStatus success"
  >
    <img
      alt="thumbs up"
      src="https://s3.us-east-1.amazonaws.com/ownersedge-dev-assets/images/thumbs-up.png"
    />
    <p>
      Your submission forms have been successfully processed.
    </p>
    <span>
      The appropriate forms should appear in your inbox within the next minute. Thank you for using Argo Limited.
    </span>
  </div>
  <div
    className="legalText"
  >
    The "pricing indication" is issued as a matter of information only and does not confer any rights upon the insured or constitute a contract between Colony Specialty and the authorized representative or producer of the insured or the insured.
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</div>
`;

exports[`>>> Quote Component with Two Bundles (with Success Email) --- Snapshot +++capturing Snapshot with 1`] = `
<div>
  <h3>
    Pricing Indication:
  </h3>
  <div
    className="quoteBlocks"
  >
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Test discount, contingent on binding with Builder’s Risk Package"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 4950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 5323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="RPS discount, contingent on binding with Builder’s Risk Package"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 250,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 6950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 7323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle="Standard rate"
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 20000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4500,
            "rate": 0,
            "terrorPremium": 225,
            "totalExcessPremium": 21000,
            "totalPremium": 4850,
          }
        }
      />
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      One of the following underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="emailStatus success"
  >
    <img
      alt="thumbs up"
      src="https://s3.us-east-1.amazonaws.com/ownersedge-dev-assets/images/thumbs-up.png"
    />
    <p>
      Your submission forms have been successfully processed.
    </p>
    <span>
      The appropriate forms should appear in your inbox within the next minute. Thank you for using Argo Limited.
    </span>
  </div>
  <div
    className="legalText"
  >
    The "pricing indication" is issued as a matter of information only and does not confer any rights upon the insured or constitute a contract between Colony Specialty and the authorized representative or producer of the insured or the insured.
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</div>
`;

exports[`>>> Quote Component without Bundles --- Snapshot +++capturing Snapshot with 1`] = `
<div>
  <h3>
    Pricing Indication:
  </h3>
  <div
    className="quoteBlocks"
  >
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle={null}
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 4950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 5323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle={null}
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 250,
            "anticipatedProjectLength": 12,
            "excessPremium": 0,
            "excessTerrorPremium": 0,
            "instantQuote": true,
            "premium": 6950,
            "rate": 0,
            "terrorPremium": 248,
            "totalExcessPremium": 0,
            "totalPremium": 7323,
          }
        }
      />
    </div>
    <div>
      <QuoteBlock
        className="oi primaryPricing"
        mainTitle={null}
        productTitle="Owner's Interest"
        ratings={
          Object {
            "additionalCoverage": 125,
            "anticipatedProjectLength": 12,
            "excessPremium": 20000,
            "excessTerrorPremium": 1000,
            "instantQuote": true,
            "premium": 4500,
            "rate": 0,
            "terrorPremium": 225,
            "totalExcessPremium": 21000,
            "totalPremium": 4850,
          }
        }
      />
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      One of the following underwriters will be in contact with you to finalize your coverage options and assist you with purchase.
    </p>
    <ul>
      <li>
        Jessica Buelow
         – 
        Supervisor
         – 
        New York
         - 
        212-607-8829
      </li>
    </ul>
  </div>
  <div
    className="emailStatus success"
  >
    <img
      alt="thumbs up"
      src="https://s3.us-east-1.amazonaws.com/ownersedge-dev-assets/images/thumbs-up.png"
    />
    <p>
      Your submission forms have been successfully processed.
    </p>
    <span>
      The appropriate forms should appear in your inbox within the next minute. Thank you for using Argo Limited.
    </span>
  </div>
  <div
    className="legalText"
  >
    The "pricing indication" is issued as a matter of information only and does not confer any rights upon the insured or constitute a contract between Colony Specialty and the authorized representative or producer of the insured or the insured.
  </div>
  <ButtonGroup
    block={false}
    bsClass="btn-group"
    justified={false}
    vertical={false}
  >
    <LinkContainer
      action="push"
      onlyActiveOnIndex={false}
      to="/submissions"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="btn"
        disabled={false}
      >
         Return to Submissions
      </Button>
    </LinkContainer>
  </ButtonGroup>
</div>
`;
